--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,13 @@ classifier =
 packages =
     servizor
 
+[entry_points]
+console_scripts =
+    servizor = servizor.app:main
+
+servizor.cmd =
+    install = servizor.cmd.install:Install
+
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
